--- a/_config.yml
+++ b/_config.yml
@@ -35,10 +35,10 @@ kramdown:
 owner:
   name: Corrie Dev Blog
   avatar: logo-loop.mp4 #logo.PNG
-  job: "Leaving some space in my head."
-  bio: "Welcome to my page on the internet. I like AI, C#, VR & Unity." #"This is my page on the internet. PhD Research on data fusion and improving safety in non-autonomous vehicles." 
+  job: "A window into head space."
+  bio: "Welcome to my page on the internet. I like AI, C#, VR & literally anything." #"This is my page on the internet. PhD Research on data fusion and improving safety in non-autonomous vehicles." 
   email:
-  disqus-shortname:
+  disqus-shortname: corrie-dev
   twitter: corriedotdev
   facebook: #username
   google:
@@ -67,5 +67,5 @@ owner:
   flickr: #username
   500px: #username
   codepen: #username
-  reddit: #username
+  reddit: corriedotdev
   telegram: #username
