--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   name: Corrie Dev Blog
   avatar: logo-loop.mp4 #logo.PNG
   job: "A window into my head space."
-  bio: "Welcome to my page on the internet. Interested in AI, C#, VR & literally anything." #"This is my page on the internet. PhD Research on data fusion and improving safety in non-autonomous vehicles." 
+  bio: "Welcome to my page on the internet. Interested in C#, VR, Design & literally anything." #"This is my page on the internet. PhD Research on data fusion and improving safety in non-autonomous vehicles." 
   email:
   disqus-shortname: corrie-dev
   twitter: corriedotdev
@@ -61,7 +61,7 @@ owner:
   foursquare: #username4
   steam: #username
   dribbble: #username
-  youtube: #username
+  youtube: CorriejgreenCoUk
   soundcloud: 
   weibo: #username
   flickr: #username
