--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   name: Corrie Dev Blog
   avatar: logo-loop.mp4 #logo.PNG
   job: "A window into my head space."
-  bio: "Welcome to my page on the internet. PhD Research Student. Interested in C#, VR, Design & literally anything." #"This is my page on the internet." 
+  bio: "Welcome to my page on the internet. 3D Graphics Research. Interested in Unity, C#, VR, Design & literally anything." #"This is my page on the internet." 
   email:
   # disqus-shortname: corrie-dev
   twitter: corriedotdev
