--- a/_config.yml
+++ b/_config.yml
@@ -48,20 +48,21 @@ owner:
     ad-client:
     ad-slot:
   bing-verify:
+  behance: corrie_green_gfx
   github: corriedotdev
   gitlab: #username
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
   linkedin: #username
   skype: #username
   xing: #username
-  instagram: #username
+  instagram: corriedotdev
   lastfm: #username
   tumblr: #username
   pinterest: #username
   foursquare: #username4
   steam: #username
   dribbble: #username
-  youtube: UCIcYBp72Q7437s-MiaE_cEw
+  youtube: Corriedotdev
   soundcloud: 
   weibo: #username
   flickr: #username
